test-version of messenger is complite